tests/sksl/errors/IfTypeMismatch.dsl.glsl
### Compilation failed:

error: expected 'bool', but found 'int'

1 error
